# onodrim_os

./: .gitignore  README.md  flake.nix  log.txt
assets/fonts/: ascii.psf
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: boot_data.rs  elf.rs  elf_section_list.rs  graphics_info.rs  kernel_loader.rs  loaded_asset_list.rs  loader.rs  main.rs  uefi.rs  unicode.rs
bootloader/src/uefi/: boot_services.rs  configuration_table.rs  file_protocol.rs  graphics_output_protocol.rs  loaded_image_protocol.rs  memory_map.rs  simple_file_system_protocol.rs  simple_text_output_protocol.rs  system_table.rs
esp/EFI/BOOT/: BOOTX64.EFI
esp/kernel/: kernel.elf
kernel/: Cargo.toml  build.rs  kernel.ld
kernel/.cargo/: config.toml
kernel/src/: boot_data.rs  errors.rs  font_renderer.rs  graphics_renderer.rs  init.S  layout_renderer.rs  logger.rs  main.rs  vga_buffer.rs
libraries/acpi_system_tables/: Cargo.toml
libraries/acpi_system_tables/src/: lib.rs  rsdp.rs  rsdt.rs  system_description_table.rs  xsdt.rs
libraries/bitmap/src/: bitmap.rs  lib.rs
libraries/bootinfo/: Cargo.toml
libraries/bootinfo/src/: bootinfo.rs  framebuffer.rs  lib.rs  meminfo.rs
libraries/elf/src/: elf_header_64.rs  elf_header_common.rs  elf_physical_header_64.rs  lib.rs
libraries/x86_64_hardware/: Cargo.toml
libraries/x86_64_hardware/src/: devices.rs  lib.rs  memory.rs
libraries/x86_64_hardware/src/devices/: ioport.rs  uart.rs
libraries/x86_64_hardware/src/memory/: address.rs
run/: build.sh  format_usb.sh  run.sh
(+3 files in other folders)
