[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
r-efi = "4.5.0"
bootinfo = { path = "../libraries/bootinfo" }
x86_64_hardware = { path = "../libraries/x86_64_hardware" }
elf = { path = "../libraries/elf" }
acpi_system_tables = { path = "../libraries/acpi_system_tables" }
bitmap = { path = "../libraries/bitmap" }

[[bin]]
name = "bootloader"
test = false
bench = false