cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-kernel.json"

[build-dependencies]
cc = "1.1.6"

[dependencies]
spin = "0.9.8"
bootinfo = { path = "../libraries/bootinfo" }
x86_64_hardware = { path = "../libraries/x86_64_hardware" }

[[bin]]
name = "kernel"
test = false
bench = false